make sure we don't show keyboard and footer switch on mobile

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -70,7 +70,7 @@
 }
 
 .synthSwitch {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-around;
   width: 100px;
@@ -138,6 +138,7 @@
   align-items: center;
   justify-content: center;
   padding: 10px 20px;
+  min-width: 120px;
   border-radius: var(--border-radius);
   text-align: center;
   font-size: 16px;
@@ -193,5 +194,11 @@
   }
   .playToggle svg {
     width: auto;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .synthSwitch {
+    display: flex;
   }
 }
